--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
   <!-- Java Script -->
   <script src="js/code.js"></script>
-
-
 </head>
 
 <body class="bg-oneAndHalf scrollbar scrollbar_style">
@@ -56,6 +54,7 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
   <section id="main" onclick="openOrCloseNav(0)">
+    <div class="swipe-area"></div>
     <h1 id="title" class="head-left">Let's learn C</h1>
     <h1 class="head-right">ברוכים הבאים לאתר שלנו Let’s learn C</h1>
 
