--- a/pointers.html
+++ b/pointers.html
@@ -64,8 +64,8 @@
     <div class="First-Para">
       <p>
 
-        נגיד שאנחנו רוצים לבנות פונקציה שמחזירה לנו יותר מערך אחד , או לשנות את הערכים של כמה משתנים שנשלחים לפונקציה .
-        עד עכשיו לא יכולנו לעשות דבר כזה, אבל לאחר שנלמד על מצביעים נוכל.
+        נגיד שאנחנו רוצים לבנות פונקציה שמשנה את הערכים של כמה משתנים שנשלחים לפונקציה.<br>
+        עד עכשיו לא היה באפשרותנו לעשות זאת, לאחר שנלמד על מצביעים נוכל.
       </p>
 
     </div>
@@ -74,7 +74,7 @@
     <div class="First-Para">
 
       <p>
-        מצביע הינו משתנה אשר מכיל כתובת של משתנים אחרים ובעזרתו אנחנו יכולים לשנות ערכים של משתנים.
+        מצביע הינו משתנה אשר מכיל כתובת של משתנים אחרים.
       </p>
 
     </div>
@@ -83,16 +83,14 @@
     <div class="First-Para">
 
       <p>
-        אנו יוצרים משתנה מסוג מצביע בצורה הבאה:
+        אנו יוצרים משתנה מסוג מצביע בצורה הבאה:<br>
+        <span dir="ltr">Type *name;</span>
         <ul>
           <li>
-            <span dir="ltr">Type *name;</span>
+            Type – אומר מאיזה מסוג המצביע שלנו.
           </li>
           <li>
-            Type – אומר מאיזה מסוג המצביע שלנו (int , double וכו...)
-          </li>
-          <li>
-            Name – השם של המצביע
+            Name – השם של המצביע.
           </li>
         </ul>
       </p>
@@ -103,11 +101,11 @@
     <div class="First-Para">
       <p>
         <ul>
-          <li> סימון * - הסימן של הכוכבית מבדיל את המשתנה מהמשתנים האחרים ואומר למחשב שזה משתנה מסוג מצביע.</li>
-          <li>סימון &amp; - בעזרת הסימון הזה אנחנו יכולים לקבל כתובת של משתנה מסויים וניתן להדפיס אותה בתור מספר בעזרת
-            %d או
+          <li> * - הסימן של הכוכבית מבדיל את המשתנה מהמשתנים האחרים ואומר למחשב שזה משתנה מסוג מצביע.</li>
+          <li> &amp; - בעזרת הסימון הזה אנחנו יכולים לקבל כתובת של משתנה מסויים וניתן להדפיס אותה בתור מספר בעזרת
+            <span dir="ltr">%d</span> או
             כתובת
-            hex בעזרת %x.</li>
+            hex בעזרת <span dir="ltr">%x</span>.</li>
         </ul>
       </p>
 
@@ -141,8 +139,7 @@
 {
   <b>int</b> number = 8;
   printf(<u>"%d"</u>,&number);
-}
-      </code></pre>
+}</code></pre>
         </figure>
 
       </div>
@@ -192,8 +189,7 @@
   <b>int</b> *<i>ptr</i> = &amp;number;
   *<i>ptr</i> = *<i>ptr</i> + 5;
   printf(<u>"%d"</u>,ptr)
-}
-      </code></pre>
+}</code></pre>
         </figure>
 
       </div>
@@ -275,8 +271,7 @@
 {
   num_a++;
   num_b++;
-}
-            </code></pre>
+}</code></pre>
         </figure>
 
       </div>
@@ -336,8 +331,7 @@
 {
   *<i>num_a</i>++;
   *<i>num_b</i>++;
-}
-          </code></pre>
+}</code></pre>
         </figure>
 
       </div>
@@ -351,7 +345,7 @@
     <div class="First-Para">
       <p>
         אם אנחנו ננסה לבצע פעולה כלשהיא על מצביע שלא ביצענו עליו פעולת השמה לכתובת של משתנה אנחנו נקבל שגיאה ולכן חשוב
-        לעשות השמה של המצביע לכתובת של משתנה לפני שאנחנו מנסים לבצע את הנ"ל:
+        לעשות השמה של מצביע.
 
       </p>
     </div>
@@ -359,7 +353,7 @@
     <h3 class="head-right">גודל של מצביע</h3>
     <div class="First-Para">
       <p>
-        כל מצביע לא משנה מאיזה סוג יהיה בעל גודל של 4 בתים.
+        כל מצביע לא משנה מאיזה סוג יהיה בעל גודל של 4 בתים.<br><br><br>
       </p>
     </div>
 
@@ -395,8 +389,7 @@
 {
   <b>int</b> *<i>ptr</i>;
   *<i>ptr</i> = 1000000;
-}
-      </code></pre>
+}</code></pre>
         </figure>
 
       </div>
@@ -438,8 +431,7 @@
   <b>int</b> number = 6;
   <b>int</b> *<i>ptr</i> = &amp;number;
   *<i>ptr</i> = 1000000;
-}
-      </code></pre>
+}</code></pre>
         </figure>
 
       </div>
@@ -518,8 +510,7 @@
 
   p1 = *<i>p2</i>;	
   
-}
-      </code></pre>
+}</code></pre>
         </figure>
 
       </div>
